--- a/project_dashboard/templates/task_form.html
+++ b/project_dashboard/templates/task_form.html
@@ -261,7 +261,8 @@
         <div class="navbar-brand">
             <i class="fas fa-rocket"></i> CyberPM
         </div>
-        <form method="GET" action="{{ url_for('logout') }}" style="display: inline;">
+        <form method="POST" action="{{ url_for('logout') }}" style="display: inline;">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <button type="submit" class="logout-btn">
                 <i class="fas fa-sign-out-alt"></i> Logout
             </button>
