--- a/project_dashboard/templates/task_form.html
+++ b/project_dashboard/templates/task_form.html
@@ -320,6 +320,24 @@
 
             <div class="form-row">
                 <div class="form-group">
+                    {{ form.start_date.label(class="form-label") }}
+                    {{ form.start_date(class="form-control") }}
+                    {% if form.start_date.errors %}
+                        <div class="error-message">{{ form.start_date.errors[0] }}</div>
+                    {% endif %}
+                </div>
+
+                <div class="form-group">
+                    {{ form.end_date.label(class="form-label") }}
+                    {{ form.end_date(class="form-control") }}
+                    {% if form.end_date.errors %}
+                        <div class="error-message">{{ form.end_date.errors[0] }}</div>
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="form-group">
                     {{ form.due_date.label(class="form-label") }}
                     {{ form.due_date(class="form-control") }}
                     {% if form.due_date.errors %}
